# tensorgrad

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  demo.ipynb  pyproject.toml
.github/workflows/: tests.yml
tensorGrad/: __init__.py  backend.py  engine.py  nn.py  optimize.py
tests/: test_loss_functions.py  test_nn_layers.py  test_optimizer.py  test_tensor_gradients.py
