[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tensorGrad"
version = "0.1.0"
description = "A tiny tensor autograd engine with optimizers and a pytorch like neural network setup"
authors = [{ name = "Marwan Abouzeid" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.22,<2"
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "torch>=2,<2.1",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "graphviz>=0.20"
]

gpu = [
    "cupy>=13; platform_system != 'Darwin'"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["tensorGrad*"] 